Added Login, Registration functionalities, User, Role and RefreshToken models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.data.mongodb.database=onco-aico
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+# App Properties
+evida.app.jwtCookieName= evida-jwt
+evida.app.jwtRefreshCookieName= evida-jwt-refresh
+evida.app.jwtSecret= ======================Evida=Spring===========================
+evida.app.jwtExpirationMs= 86400000
+evida.app.jwtRefreshExpirationMs= 86400000
